--- a/views/views.xml
+++ b/views/views.xml
@@ -24,6 +24,30 @@
         </field>
     </record>
 
+    <record id="dinner_book_pro_line_search" model="ir.ui.view">
+        <field name="name">dinner.book.pro.line.search</field>
+        <field name="model">dinner.book.pro.line</field>
+        <field name="arch" type="xml">
+            <search string="Search">
+                <field name="book_date" string="模糊查询" filter_domain="['|', ('book_id.user','ilike',self), ('book_date','ilike',self)]" />
+                <separator/>
+                <group>
+                    <filter string="今日订餐" name="order_today" domain="[('book_date', '=', datetime.datetime.now().strftime('%Y-%m-%d'))]" />
+                    <filter string="今日午餐" name="order_launch" domain="[('book_date', '=', datetime.datetime.now().strftime('%Y-%m-%d')), ('book_option', '=' ,'launch')]"/>
+                    <filter string="今日晚餐" name="order_dinner" domain="[('book_date', '=', datetime.datetime.now().strftime('%Y-%m-%d')), ('book_option', '=', 'dinner')]"/>
+                    <filter string="本周订餐" name="order_this_week" domain="[
+                            ('book_date', '&gt;=', (datetime.datetime.combine(context_today() + relativedelta(weeks=-1,days=1,weekday=0), datetime.time(0,0,0)).to_utc())),
+                            ('book_date', '&lt;', (datetime.datetime.combine(context_today() + relativedelta(days=1,weekday=0), datetime.time(0,0,0)).to_utc())),
+                    ]"/>
+                </group>
+<!--                <field -->
+                <group expand="0" string="Group by">
+                    <filter string="商家" name="group_by_shop_name" context="{'group_by':'shop_id'}"/>
+                </group>
+            </search>
+        </field>
+    </record>
+
     <record model="ir.ui.view" id="dinner_book_pro.list">
       <field name="name">员工订餐列表</field>
       <field name="model">dinner.book.pro</field>
@@ -47,7 +71,7 @@
                         <button name="submit" type="object" string="提交" class="btn-primary" invisible="status != 'draft' or pay_status == 'unpaid'"/>
                         <button name="revoke" type="object" string="撤回" class="btn-primary" confirm="确定撤回吗？撤回后，可重新编辑后提交" invisible="status != 'book' or user != uid or pay_status != 'unpaid'"/>
                         <button name="cancel" type="object" string="取消" class="btn-danger" confirm="确定取消吗？" invisible="status != 'book' or user != uid"/>
-                        <button name="%(dinner_book_pro.action_pay_wizard)d" type="action" string="我要支付" context="{'total_price': total_price}" class="btn-primary" invisible="pay_status != 'unpaid' or user != uid"/>
+                        <button name="%(dinner_book_pro.action_pay_wizard)d" type="action" string="支付" context="{'total_price': total_price}" class="btn-primary" invisible="pay_status != 'unpaid' or user != uid"/>
                         <button name="reject" type="object" string="未收到餐费，退回申请" confirm="确定退回该申请单吗？" class="btn-danger" invisible="status != 'book' or pay_status != 'paid'" groups="dinner_book_pro.group_dinner_manager"/>
                         <field name="status" widget="statusbar" options="{'clickable': '1'}"/>
                     </header>
@@ -105,7 +129,7 @@
                     <notebook>
                         <page string="操作日志明细">
                             <field name="flow_trace_ids" widget="one2many" onlabel="1" readonly="1">
-                                <list string="操作日志" default_order="id desc">
+                                <list string="操作日志" default_order="id desc" decoration-danger="operation == 'reject'">
                                     <field name="operator"/>
                                     <field name="create_date" string="操作时间"/>
                                     <field name="operation"/>
@@ -134,16 +158,21 @@
       </field>
     </record>
 
-<!--      <record model="ir.ui.view" id="dinner_goods_list">-->
-<!--      <field name="name">菜品列表</field>-->
-<!--      <field name="model">dinner.goods</field>-->
-<!--      <field name="arch" type="xml">-->
-<!--        <list editable="bottom">-->
-<!--          <field name="category"/>-->
-<!--          <field name="goods_name"/>-->
-<!--        </list>-->
-<!--      </field>-->
-<!--    </record>-->
+  <record model="ir.ui.view" id="dinner_book_pro_line_list">
+      <field name="name">订餐统计</field>
+      <field name="model">dinner.book.pro.line</field>
+      <field name="arch" type="xml">
+        <list create="false" edit="false" delete="false">
+            <field name="book_id"/>
+            <field name="book_date"/>
+            <field name="book_option"/>
+            <field name="shop_id"/>
+            <field name="meat"/>
+            <field name="vegetables"/>
+            <field name="drink"/>
+        </list>
+      </field>
+    </record>
 
   <record model="ir.ui.view" id="res_shop_list">
       <field name="name">菜品列表</field>
@@ -158,10 +187,17 @@
     <!-- actions opening views on models -->
 
     <record model="ir.actions.act_window" id="dinner_book_pro_action_window">
-      <field name="name">我要订餐</field>
+      <field name="name">订餐</field>
       <field name="res_model">dinner.book.pro</field>
       <field name="view_mode">list,form</field>
     </record>
+
+   <record model="ir.actions.act_window" id="dinner_book_pro_line_action">
+       <field name="name">订餐统计</field>
+      <field name="res_model">dinner.book.pro.line</field>
+      <field name="view_mode">list</field>
+      <field name="domain">[('book_id.pay_status','in', ('paid', 'not_pay')), ('book_id.status', '=', 'book')]</field>
+   </record>
 
   <record model="ir.actions.act_window" id="res_shop_action_window">
       <field name="name">商家信息设置</field>
@@ -202,6 +238,8 @@
 
     <menuitem name="订餐" id="dinner_book" parent="dinner_book_pro_order"
               action="dinner_book_pro_action_window" groups="base.group_user"/>
+    <menuitem name="订餐统计" id="dinner_book_statics" parent="dinner_book_pro_order"
+             action="dinner_book_pro_line_action" groups="dinner_book_pro.group_dinner_manager"/>
 
     <menuitem name="商家信息设置" id="res_shop_setting" parent="dinner_book_pro_setting"
               action="res_shop_action_window" groups="dinner_book_pro.group_dinner_manager"/>
